[package]
name = "fluent_content"
version = "0.0.6"
edition = "2024"
description = "Fluent extension for easy access to message content."
readme = "README.md"
homepage = "https://crates.io/crates/fluent_content"
repository = "https://github.com/kgv/fluent_content"
license = "MIT OR Apache-2.0"
keywords = ["fluent", "internationalization", "localization"]
categories = ["internationalization", "localization"]
exclude = [".github/**/*"]

[dependencies]
fluent = "0.17.0"
fluent-langneg = "0.14.2"
intl-memoizer = "0.5.1"
thiserror = "2.0.17"
tracing = "0.1.41"
unic-langid = { version = "0.9.6", features = ["serde"] }

[dev-dependencies]
unic-langid = { version = "0.9.6", features = ["macros"] }
